fix(diary): fix diaries on small screens

--- a/components/articles/blocks/diary.scss
+++ b/components/articles/blocks/diary.scss
@@ -12,10 +12,12 @@
 
   &__text-content {
     display: flex;
+    justify-content: flex-end;
     margin-bottom: 12px;
   }
 
   &__picture {
+    flex-shrink: 0;
     z-index: 1;
 
     img {
@@ -26,6 +28,7 @@
 
   &__title {
     display: flex;
+    flex-shrink: 0;
     flex-wrap: wrap;
     justify-content: flex-start;
 
@@ -40,11 +43,19 @@
   }
 
   &__text-wrap {
+    font-size: 14px;
     letter-spacing: 1px;
+    line-height: 24px;
   }
 
   &__text {
+    /* stylelint-disable */
+    -webkit-box-orient: vertical;
+    display: -webkit-box;
+    height: 96px;
+    -webkit-line-clamp: 4;
     overflow: hidden;
+    /* stylelint-enable */
   }
 
   &__arrows {
@@ -81,6 +92,7 @@
     &__picture {
       height: 180px;
       order: 1;
+      padding-left: 20px;
       width: 180px;
     }
 
@@ -88,21 +100,8 @@
       font-size: 20px;
       height: 100px;
       line-height: 33px;
-      width: 240px;
-    }
-
-    &__text-wrap {
-      font-size: 14px;
-      line-height: 24px;
-    }
-
-    &__text {
-      /* stylelint-disable */
-      -webkit-box-orient: vertical;
-      display: -webkit-box;
-      height: 96px;
-      -webkit-line-clamp: 4;
-      /* stylelint-enable */
+      padding-right: 20px;
+      width: 220px;
     }
   }
 }
@@ -112,7 +111,7 @@
 
   .diary {
     &__text {
-      width: 570px;
+      // width: 570px;
     }
   }
 }
@@ -122,7 +121,7 @@
 
   .diary {
     &__text {
-      width: 384px;
+      // width: 384px;
     }
   }
 }
@@ -136,7 +135,6 @@
 
     &__text-content {
       flex-direction: column;
-      margin-top: 50px;
       width: 440px;
     }
 
@@ -155,7 +153,6 @@
     &__text {
       font-size: 14px;
       line-height: 24px;
-      width: 400px;
     }
   }
 }
@@ -168,7 +165,7 @@
 
     &__picture {
       border-bottom: 1px solid $primary-grey;
-      height: 90px;
+      height: 89px;
       margin-bottom: 30px;
       text-align: right;
       width: 100%;
@@ -191,7 +188,6 @@
 
     &__text {
       font-size: 14px;
-      line-height: 21px;
     }
   }
 }
@@ -201,7 +197,7 @@
 
   .diary {
     &__text {
-      height: 63px;
+      // height: 63px;
     }
   }
 }
@@ -211,7 +207,7 @@
 
   .diary {
     &__text {
-      height: 105px;
+      // height: 105px;
     }
   }
 }
